Projects/ChinaController/CPPWrapper/Wrap.h

typedef struct tagWRAP_NET_LOG_INFO
{
    NET_TIME stuTime;
    char szUserName[DH_COMMON_STRING_32];
    char szLogType[DH_COMMON_STRING_128];
	char szLogMessage[DH_COMMON_STRING_1024];
} WRAP_NET_LOG_INFO;
typedef struct
{
	WRAP_NET_LOG_INFO Logs[10];
} WRAP_Dev_QueryLogList_Result;
extern "C" SDK_CLIENT_API int SDK_CALL_METHOD WRAP_GetLogCount(int loginID, QUERY_DEVICE_LOG_PARAM* logParam);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_QueryStart(int loginID);
extern "C" SDK_CLIENT_API int SDK_CALL_METHOD WRAP_QueryNext(WRAP_Dev_QueryLogList_Result* result);
extern "C" SDK_CLIENT_API BOOL SDK_CALL_METHOD WRAP_QueryStop();