Projects/ChinaController/ChinaSKDDriver/SDK/NativeWrapper.cs


		[DllImport(@"CPPWrapper.dll")]
		public static extern bool WRAP_BeginGetAll_Passwords(int loginID, ref int finderID);

		[DllImport(@"CPPWrapper.dll")]
		public static extern int WRAP_GetAll_Passwords(int finderID, IntPtr result);
		#endregion

		#region Holidays
		[StructLayout(LayoutKind.Sequential)]
		public struct NET_RECORDSET_HOLIDAY
		{
			public int dwSize;
			public int nRecNo;
			public int nDoorNum;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
			public int[] sznDoors;
			public NET_TIME stuStartTime;
			public NET_TIME stuEndTime;
			public bool bEnable;
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
			public string szHolidayNo;
		}

		[DllImport(@"CPPWrapper.dll")]
		public static extern int WRAP_Insert_Holiday(int loginID, ref NET_RECORDSET_HOLIDAY nativeHoliday);

		[DllImport(@"CPPWrapper.dll")]
		public static extern bool WRAP_Update_Holiday(int loginID, ref NET_RECORDSET_HOLIDAY nativeHoliday);

		[DllImport(@"CPPWrapper.dll")]
		public static extern bool WRAP_Remove_Holiday(int loginID, int recordNo);

		[DllImport(@"CPPWrapper.dll")]
		public static extern bool WRAP_RemoveAll_Holidays(int loginID);

		[DllImport(@"CPPWrapper.dll")]
		public static extern bool WRAP_Get_Holiday_Info(int loginID, int recordNo, IntPtr result); // NET_RECORDSET_HOLIDAY

		[DllImport(@"CPPWrapper.dll")]
		public static extern int WRAP_Get_Holidays_Count(int loginID);

		[StructLayout(LayoutKind.Sequential)]
		public struct HolidaysCollection
		{
			public int Count;
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 10)]
			public NET_RECORDSET_HOLIDAY[] Holidays;
		}

		[DllImport(@"CPPWrapper.dll")]
		public static extern bool WRAP_GetAll_Holidays(int loginID, IntPtr result);
		#endregion

		#region TimeShedules
		[StructLayout(LayoutKind.Sequential)]
		public struct CFG_TIME_SECTION
		{
			public Int32 dwRecordMask;
			public Int32 nBeginHour;
			public Int32 nBeginMin;
			public Int32 nBeginSec;
			public Int32 nEndHour;
			public Int32 nEndMin;
			public Int32 nEndSec;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct CFG_ACCESS_TIMESCHEDULE_INFO
		{
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 7 * 4)]
			public CFG_TIME_SECTION[] stuTime;
			public bool bEnable;
		}

		[DllImport(@"CPPWrapper.dll")]
		public static extern bool WRAP_GetTimeSchedule(int loginID, int index, out CFG_ACCESS_TIMESCHEDULE_INFO result);

		[DllImport(@"CPPWrapper.dll")]
		public static extern bool WRAP_SetTimeSchedule(int loginID, int index, ref CFG_ACCESS_TIMESCHEDULE_INFO param);
		#endregion

		#region Logs
		public struct WRAP_NET_LOG_INFO
		{
			public NET_TIME stuTime;
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
			public string szUserName;
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 128)]
			public string szLogType;
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 1024)]
			public string szLogMessage;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct WRAP_Dev_QueryLogList_Result
		{
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 10)]
			public WRAP_NET_LOG_INFO[] Logs;
		}

		[DllImport(@"CPPWrapper.dll")]
		public static extern int WRAP_GetLogCount(int loginID, ref QUERY_DEVICE_LOG_PARAM logParam);

		[DllImport(@"CPPWrapper.dll")]
		public static extern bool WRAP_QueryStart(int loginID);

		[DllImport(@"CPPWrapper.dll")]
		public static extern int WRAP_QueryNext(IntPtr result);

		[DllImport(@"CPPWrapper.dll")]
		public static extern bool WRAP_QueryStop();
		#endregion

		#region Events
		public enum NET_ACCESS_CTL_EVENT_TYPE
		{
			[DescriptionAttribute("Неизвестно")]
			NET_ACCESS_CTL_EVENT_UNKNOWN = 0,

			[DescriptionAttribute("Вход")]
			NET_ACCESS_CTL_EVENT_ENTRY,

			[DescriptionAttribute("Выход")]
			NET_ACCESS_CTL_EVENT_EXIT,
		}

		public enum NET_ACCESS_CTL_STATUS_TYPE
		{
			NET_ACCESS_CTL_STATUS_TYPE_UNKNOWN = 0,
			NET_ACCESS_CTL_STATUS_TYPE_OPEN,
			NET_ACCESS_CTL_STATUS_TYPE_CLOSE,
		}

		public enum NET_ACCESS_DOOROPEN_METHOD
		{
			[DescriptionAttribute("Неизвестно")]
			NET_ACCESS_DOOROPEN_METHOD_UNKNOWN = 0,

			[DescriptionAttribute("Пароль")]
			NET_ACCESS_DOOROPEN_METHOD_PWD_ONLY,

			[DescriptionAttribute("карта")]
			NET_ACCESS_DOOROPEN_METHOD_CARD,

			[DescriptionAttribute("Сначала карта")]
			NET_ACCESS_DOOROPEN_METHOD_CARD_FIRST,

			[DescriptionAttribute("Сначала пароль")]
			NET_ACCESS_DOOROPEN_METHOD_PWD_FIRST,

			[DescriptionAttribute("Удаленно")]
			NET_ACCESS_DOOROPEN_METHOD_REMOTE,

			[DescriptionAttribute("Кнопка")]
			NET_ACCESS_DOOROPEN_METHOD_BUTTON,
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct WRAP_JournalItem
		{
			public int LoginID;
			public int ExtraEventType;
			public int EventType;
			public NET_TIME DeviceDateTime;
			public int nDoor;
			public NET_ACCESS_CTL_EVENT_TYPE emEventType;
			public bool bStatus;
			public NET_ACCESSCTLCARD_TYPE emCardType;
			public NET_ACCESS_DOOROPEN_METHOD emOpenMethod;
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
			public string szCardNo;
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 64)]
			public string szPwd;
			public int nAction;
			public NET_ACCESS_CTL_STATUS_TYPE emStatus;
		}

		[DllImport(@"CPPWrapper.dll")]
		public static extern int WRAP_GetLastIndex();

		[DllImport(@"CPPWrapper.dll")]
		public static extern bool WRAP_GetJournalItem(int index, out WRAP_JournalItem journalItem);

		[DllImport(@"CPPWrapper.dll")]
		public static extern bool WRAP_IsConnected(int loginID);
		#endregion

		#region Native
		//[UnmanagedFunctionPointer(CallingConvention.StdCall)]
		public delegate void fDisConnectDelegate(Int32 lLoginID, string pchDVRIP, Int32 nDVRPort, UInt32 dwUser);

		public delegate void fHaveReConnectDelegate(Int32 lLoginID, string pchDVRIP, Int32 nDVRPort, UInt32 dwUser);

		public delegate bool fMessCallBackDelegate(Int32 lCommand, Int32 lLoginID, IntPtr pBuf, UInt32 dwBufLen, string pchDVRIP, Int32 nDVRPort, UInt32 dwUser);

		[DllImport(@"dhnetsdk.dll")]
		public static extern Boolean CLIENT_Init(fDisConnectDelegate cbDisConnect, UInt32 dwUser);

		[DllImport(@"dhnetsdk.dll")]
		public static extern void CLIENT_SetAutoReconnect(fHaveReConnectDelegate cbAutoConnect, UInt32 dwUser);

		[DllImport(@"dhnetsdk.dll")]
		public static extern void CLIENT_SetDVRMessCallBack(fMessCallBackDelegate cbMessage, UInt32 dwUser);

		[StructLayout(LayoutKind.Sequential)]
		public struct NET_DEVICEINFO
		{
			[MarshalAs(UnmanagedType.ByValArray, SizeConst = 48)]
			public Byte[] sSerialNumber;
			public Byte byAlarmInPortNum;
			public Byte byAlarmOutPortNum;
			public Byte byDiskNum;
			public Byte byDVRType;
			public Byte byChanNum;
		}

		[DllImport(@"dhnetsdk.dll")]
		public static extern Int32 CLIENT_Login(String pchDVRIP, UInt16 wDVRPort, String pchUserName, String pchPassword, out NET_DEVICEINFO lpDeviceInfo, out Int32 error);

		[DllImport(@"dhnetsdk.dll")]
		public static extern bool CLIENT_StartListenEx(Int32 lLoginID);

		[DllImport(@"dhnetsdk.dll")]
		public static extern bool CLIENT_StopListen(Int32 lLoginID);

		[DllImport(@"dhnetsdk.dll")]
		public static extern bool CLIENT_Cleanup();
		#endregion
	}
}